--- a/layout/_partial/comments.ejs
+++ b/layout/_partial/comments.ejs
@@ -12,3 +12,15 @@
         </div>
     </div>
 <% } %>
+<% if(page.comments && theme.waline.enabled){ %>
+    <div id="waline"></div>
+    <script type="module">
+    import { init } from 'https://unpkg.com/@waline/client@v3/dist/waline.js';
+
+    init({
+        el: '#waline',
+        serverURL: '<%= theme.waline.serverURL %>',
+        dark: true,
+    });
+    </script>
+<% } %>
