--- a/layout/_partial/head.ejs
+++ b/layout/_partial/head.ejs
@@ -77,4 +77,11 @@
 		</script>
 		<script src='https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.5/latest.js?config=TeX-MML-AM_CHTML' async></script>
 	<% } %>
+  <!-- Waline Comments -->
+  <% if(page.comments && theme.waline.enabled){ %>
+    <link
+    rel="stylesheet"
+    href="https://unpkg.com/@waline/client@v3/dist/waline.css"
+    />
+  <% } %>
 </head>
